# DISMv2

./: .gitignore  APC_SCANNING_SUMMARY.md  BSOD_PROTECTION_GUIDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  CabHandler.cpp  DISMv2.sln  ENHANCEMENT_SUMMARY.md  HIPS_GUIDE.md  LICENSE  README.md  SELF_PROTECTION_SUMMARY.md  TestAI.vcxproj  TestAI.vcxproj.filters  demo.bat  demo_self_protection.bat  dismv2.py  requirements.txt  setup.py  test_dismv2.py
TestAI/: ADD_PACKAGE_ENHANCED_DOCUMENTATION.md  ADVANCED_ENHANCEMENTS_PHASE2.md  BootUtils.cpp  BootUtils.h  CBS_IMPLEMENTATION_COMPLETE.md  CBS_INTEGRATION_COMPLETE_SUCCESS.md  CBS_INTEGRATION_GUIDE.md  CabHandler.cpp  CabHandler.h  CabHandler_test.h  CbsIntegratedHandler.cpp  CbsIntegratedHandler.h  CbsManager.cpp  CbsManager.h  DismApiWrapper.cpp  DismApiWrapper.h  ENTERPRISE_SECURITY_COMPLETE.md  EnterpriseSecurityManager.cpp  EnterpriseSecurityManager.h  FINAL_COMPLETION_SUCCESS.md  FINAL_VERIFICATION_COMPLETE.md  Makefile  ONLINE_FIX_SUMMARY.md  OUTPUT_FORMATTING_IMPROVEMENTS_COMPLETE.md  OfflineRegistry.cpp  OfflineRegistry.h  PACKAGE_SUPERSEDENCE_IMPLEMENTATION.md  PARAMETER_PARSING_FIX_COMPLETE.md  PHASE2A_IMPLEMENTATION_SUCCESS.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_FINAL_SUCCESS_REPORT.md  PHASE2_IMPLEMENTATION_GUIDE.md  PRODUCTION_READY_IMPROVEMENTS_COMPLETE.md  PSF_WIM_DISM_INTEGRATION_COMPLETE.md  PSF_WIM_IMPLEMENTATION_COMPLETE.md  PSF_WIM_IMPLEMENTATION_GUIDE.md  PackageSupersedenceManager.cpp  PackageSupersedenceManager.h  PackageSupersedenceManagerSimple.cpp  PackageSupersedenceManagerSimple.h  (+52 more)
hips/: CMakeLists.txt  HipsUserMode.vcxproj.filters  build.bat  build_with_driver.bat  comprehensive_test  comprehensive_test.cpp  demo_correlation_engine.cpp  simple_test  simple_test.cpp  test_bsod_proof  test_bsod_proof.cpp
hips/HipsConfigTool.Tests/: ConfigurationServiceTests.cs  HipsConfigTool.Tests.csproj  MenuServiceTests.cs  UnitTest1.cs
hips/config/: hips_config.json  hips_config_with_self_protection.json
hips/docs/: CORRELATION_ENGINE.md  README.md
hips/driver/: HipsDriver.inf  HipsDriver.vcxproj.filters
hips/driver/include/: hips_driver.h
hips/driver/src/: driver_main.c  event_manager.c  file_monitor.c  process_monitor.c  registry_monitor.c  rule_engine.c  utils.c
hips/gui/: HipsConfigTool.csproj  Program.cs  README.md
hips/gui/Commands/: CommandRegistry.cs  ExitCommand.cs  GeneralSettingsCommand.cs  ICommand.cs  LoadConfigurationCommand.cs  MonitoringSettingsCommand.cs  PreviewConfigurationCommand.cs  SaveConfigurationCommand.cs  StatusAndControlCommand.cs
hips/gui/Services/: ConfigurationService.cs  DriverService.cs  MenuService.cs
hips/gui_vcpp/: DriverInterface.cpp  DriverInterface.h  GUI_PREVIEW.txt  HipsGui.rc  HipsGui.vcxproj  HipsGuiApp.cpp  HipsGuiApp.h  HipsMainDialog.cpp  HipsMainDialog.h  build_gui.bat  resource.h  stdafx.h
hips/gui_vcpp/res/: HipsGui.rc2
hips/include/: alert_manager.h  config_manager.h  correlation_engine.h  driver_interface.h  file_monitor.h  hips_core.h  log_manager.h  memory_protector.h  network_monitor.h  process_monitor.h  registry_monitor.h  self_protection.h
hips/src/: alert_manager.cpp  config_manager.cpp  correlation_engine.cpp  driver_interface.cpp  file_monitor.cpp  hips_core.cpp  log_manager.cpp  main.cpp  memory_protector.cpp  network_monitor.cpp  process_monitor.cpp  registry_monitor.cpp  self_protection.cpp
hips/tests/: CMakeLists.txt  test_correlation_engine.cpp  test_file_monitor.cpp  test_hips_core.cpp  test_integration.cpp  test_process_monitor.cpp  test_self_protection.cpp
